examples/test/testpolicy11211.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11211
  namespace: namespace199
spec:
  podSelector:
    matchLabels:
      key7: value25
      key17: value24
      key41: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value7
      podSelector:
        matchLabels:
          key37: value36
          key13: value42
